--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,14 +11,14 @@
         "<node_internals>/**"
       ],
       "type": "node",
-      "program": "${workspaceFolder}/introduction_to_algorithms/dynamic_programming.ts",
+      "program": "${workspaceFolder}/introduction_to_algorithms/greedy_algorithm.ts",
       "runtimeArgs": [
         "-r",
         "ts-node/register",
         "-r",
         "tsconfig-paths/register"
       ],
-      // "console": "integratedTerminal",
+      "console": "integratedTerminal",
     },
     {
       "type": "node",
