--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "<node_internals>/**"
       ],
       "type": "node",
-      "program": "${workspaceFolder}/introduction_to_algorithms/huffman_code.ts",
+      "program": "${workspaceFolder}/algorithms/base64.ts",
       "runtimeArgs": [
         "-r",
         "ts-node/register",
