--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
+    "lib": [
+      "es2021"
+    ],
     "module": "commonjs",
     "target": "es2021",
-    "outDir": "bin",
-    "sourceMap": true
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
   }
 }
