--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/algorithms/dynamic.go"
+      "program": "${workspaceFolder}/the_go_programming_language/ch2/crawl/main.go"
     },
     {
       "name": "typescript",
