--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "esbuild": "^0.13.0",
     "jest": "^27.1.0",
+    "react": "^17.0.2",
+    "react-reconciler": "^0.26.1",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build_react": "esbuild ./react/**.jsx --sourcemap --bundle --outdir=./react/dist --servedir=react --serve=8000"
   },
   "repository": {
     "type": "git",
