--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "esbuild": "^0.13.0",
     "jest": "^27.1.0",
-    "react": "^17.0.2",
+    "react": "0.0.0-experimental-55d75005b-20211011",
+    "react-dom": "0.0.0-experimental-55d75005b-20211011",
     "react-reconciler": "^0.26.1",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
