--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "lib": [
-      "es2021"
+      "es2021",
+      "dom"
     ],
     "module": "commonjs",
     "target": "es2021",
