--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "dependencies": {},
   "devDependencies": {
     "esbuild": "^0.13.0",
-    "jest": "^27.1.0",
-    "react": "0.0.0-experimental-55d75005b-20211011",
-    "react-dom": "0.0.0-experimental-55d75005b-20211011",
+    "jest": "^27.3.1",
+    "promises-aplus-tests": "^2.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-reconciler": "^0.26.1",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "build_react": "esbuild ./react/**.jsx --sourcemap --bundle --outdir=./react/dist --servedir=react --serve=8000"
+    "build_react": "esbuild ./react/**.jsx --sourcemap --bundle --outdir=./react/dist --servedir=react --serve=8000",
+    "test_promise": "promises-aplus-tests ./frontend/promise.js"
   },
   "repository": {
     "type": "git",
